    needed.

  [ Modestas Vainius ]
  * Drop patches which were merged upstream:
    - debian/patches/hurd_platform.diff;
    - FindGTK2_pangommconfig.diff;
    - FindJNI_fix_libarch_determination.diff;
    - cpack_installed_size.diff;
    - add_libarchive_script.patch - better version merged upstream;
    - fix-CTestTestFailedSubmit-xmlrpc.diff;
    - fix_spelling_errors.patch.

 -- Modestas Vainius <modax@debian.org>  Sat, 13 Nov 2010 01:07:46 +0200

cmake (2.8.2-2) unstable; urgency=low

  [ Kai Wasserbäch ]
  * debian/control:
    - Added libarchive-dev to Build-Depends.
    - Don't {,B-}D on procps on Hurd, already provided by hurd.
    - Added Homepage field (fixes no-homepage-field).
    - Added new binary package cmake-doc and moved all additional
      documentation there (registered with doc-base now).
  * debian/rules: Use system libarchive.
  * debian/patches:
    - add_libarchive_script.patch: Added to allow building with the system's
      libarchive.
    - fix_spelling_errors.patch: Added. Thanks to Lintian for finding them.

  [ Modestas Vainius ]
  * Build with CTEST_USE_XMLRPC to re-enable XMLRPC support in CTest and add
    fix-CTestTestFailedSubmit-xmlrpc.diff patch to fix a (wrongly) failing test
    in that case.
  * Add cmake-dbg package.
  * Add cmake to cmake-doc Suggests.
  * Start package synopsis with lowercase letter where applicable.

 -- Modestas Vainius <modax@debian.org>  Mon, 12 Jul 2010 02:14:05 +0300

cmake (2.8.2-1) unstable; urgency=low

  * New upstream release:
    - Detects Clang compiler (Closes: #560693).

  [ Kai Wasserbäch ]
  * debian/patches/debian/patches/FindPython_fix_#569321_and_#580503.diff:
    Added. (Closes: #569321, #580503)
  * debian/cmake-data.NEWS: Document the changes of the new patch, so nobody
    gets surprised.

  [ Modestas Vainius ]
  * Update patches:
    - kFreeBSD_Hurd_fixes.diff - remove, merged upstream.
  * Bump Standards-Version to 3.9.0: