@@ -16,6 +16,7 @@ cmake (2.8.3-1) UNRELEASED; urgency=low
     - add_libarchive_script.patch - better version merged upstream;
     - fix-CTestTestFailedSubmit-xmlrpc.diff;
     - fix_spelling_errors.patch.
+  * Adapt FindPython_fix_#569321_and_#580503.diff patch to upstream changes.
 
  -- Modestas Vainius <modax@debian.org>  Sat, 13 Nov 2010 01:07:46 +0200
 
